maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:2: error: Missing closing brace `}' assumed here
override def run() {while (!isOverBaggle()) {if (!isFacingWall()) {forward()} else {right() if (!isFacingWall()) {forward()} else {left(); left(); if (!isFacingWall() {forward()})}}
^RandomMouseMaze:2: error: expected start of definition
override def run() {while (!isOverBaggle()) {if (!isFacingWall()) {forward()} else {right() if (!isFacingWall()) {forward()} else {left(); left(); if (!isFacingWall() {forward()})}}
         ^